<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/CardViewWithCornerStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/locationLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/currentLocation"
            style="@style/DefEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@drawable/rounded_up"
            android:drawableStart="@drawable/ic_red_pin"
            android:gravity="center_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:hint="Yunusobod" />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/dividerColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:background="@drawable/rounded_down"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/currentLocation">


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/destination"
                style="@style/DefEditTextStyle"
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:layout_weight="1"
                android:background="@color/transparent_a"
                android:drawableStart="@drawable/ic_blue_oval"
                android:gravity="center_vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:hint="Yunusobod" />

            <View
                android:id="@+id/view3"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginVertical="16dp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:background="#CBCBCB" />

            <ImageView
                style="@style/DefImageViewStyle"
                android:layout_gravity="center"
                android:layout_marginEnd="21dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_add" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/economCard"
        style="@style/DefCardViewStyle"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_83sdp"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintEnd_toStartOf="@id/comfortCard"
        app:layout_constraintStart_toStartOf="@id/locationLayout"
        app:layout_constraintTop_toBottomOf="@id/locationLayout">

        <ImageView
            android:id="@+id/economImg"
            style="@style/DefImageViewStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_43sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/econom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/economTitle"
            style="@style/TextMedium"
            android:layout_marginStart="@dimen/_12sdp"
            android:text="@string/econom"
            android:textColor="@color/car_catogry_title_color"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/economImg" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/economCost"
            style="@style/TextLarge"
            android:fontFamily="@font/lato_bold"
            android:text="@string/amount1"
            app:layout_constraintStart_toStartOf="@id/economTitle"
            app:layout_constraintTop_toBottomOf="@id/economTitle" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/comfortCard"
        style="@style/DefCardViewStyle"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_83sdp"
        android:background="@drawable/car_category_layout_bg"

        app:layout_constraintEnd_toStartOf="@id/carryCard"
        app:layout_constraintStart_toEndOf="@id/economCard"
        app:layout_constraintTop_toTopOf="@id/economCard">

        <ImageView
            android:id="@+id/comfortImg"
            style="@style/DefImageViewStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_43sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/comfort"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/comfortTitle"
            style="@style/TextMedium"
            android:layout_marginStart="@dimen/_12sdp"
            android:text="@string/comfort"
            android:textColor="@color/car_catogry_title_color"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/comfortImg" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/comfortCost"
            style="@style/TextLarge"
            android:fontFamily="@font/lato_bold"
            android:text="@string/amount1"
            app:layout_constraintStart_toStartOf="@id/comfortTitle"
            app:layout_constraintTop_toBottomOf="@id/comfortTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/carryCard"
        style="@style/DefCardViewStyle"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_83sdp"
        app:layout_constraintEnd_toEndOf="@id/locationLayout"
        app:layout_constraintStart_toEndOf="@id/comfortCard"
        app:layout_constraintTop_toTopOf="@id/economCard">

        <ImageView
            android:id="@+id/carryImg"
            style="@style/DefImageViewStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_43sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/carry"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/carryTitle"
            style="@style/TextMedium"
            android:layout_marginStart="@dimen/_12sdp"
            android:text="@string/carry"
            android:textColor="@color/car_catogry_title_color"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/carryImg" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/carryCost"
            style="@style/TextLarge"
            android:fontFamily="@font/lato_bold"
            android:text="@string/amount2"
            app:layout_constraintStart_toStartOf="@id/carryTitle"
            app:layout_constraintTop_toBottomOf="@id/carryTitle" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <ImageView
        android:id="@+id/cashIcon"
        style="@style/DefImageViewStyle"
        android:layout_marginTop="@dimen/_20sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_cash_icon"
        app:layout_constraintEnd_toEndOf="@id/economCard"
        app:layout_constraintStart_toStartOf="@id/economCard"
        app:layout_constraintTop_toBottomOf="@id/economCard" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/cashTitle"
        style="@style/TextMedium"
        android:fontFamily="@font/lato_semibold"
        android:text="@string/icon_title_1"
        android:textColor="@color/icon_title_color"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintEnd_toEndOf="@+id/cashIcon"
        app:layout_constraintStart_toStartOf="@+id/cashIcon"
        app:layout_constraintTop_toBottomOf="@id/cashIcon" />


    <ImageView
        android:id="@+id/planIcon"
        style="@style/DefImageViewStyle"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_plan_time"
        app:layout_constraintEnd_toEndOf="@id/comfortCard"
        app:layout_constraintStart_toStartOf="@id/comfortCard"
        app:layout_constraintTop_toTopOf="@id/cashIcon" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/planTitle"
        style="@style/TextMedium"
        android:fontFamily="@font/lato_semibold"
        android:text="@string/icon_title_2"
        android:textColor="@color/icon_title_color"
        app:layout_constraintEnd_toEndOf="@+id/planIcon"
        app:layout_constraintStart_toStartOf="@+id/planIcon"
        app:layout_constraintTop_toBottomOf="@id/planIcon" />


    <ImageView
        android:id="@+id/wishIcon"
        style="@style/DefImageViewStyle"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_wish_icon"
        app:layout_constraintEnd_toEndOf="@id/carryCard"
        app:layout_constraintStart_toStartOf="@id/carryCard"
        app:layout_constraintTop_toTopOf="@id/cashIcon" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/wishTitle"
        style="@style/TextMedium"
        android:fontFamily="@font/lato_semibold"
        android:text="@string/icon_title_3"
        android:textColor="@color/icon_title_color"
        app:layout_constraintEnd_toEndOf="@+id/wishIcon"
        app:layout_constraintStart_toStartOf="@+id/wishIcon"
        app:layout_constraintTop_toBottomOf="@id/wishIcon" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/bookingButton"
        style="@style/DefButtonStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/_51sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:text="@string/booking"
        app:backgroundTint="@color/main_button_color"
        app:cornerRadius="@dimen/_11sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/locationLayout"
        app:layout_constraintStart_toStartOf="@+id/locationLayout"
        app:layout_constraintTop_toBottomOf="@id/cashTitle" />


</androidx.constraintlayout.widget.ConstraintLayout>