<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.ui.screens.map_fragment.MapFragment">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/map_point"
            style="@style/LottieStyle"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/map_fragment"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="-25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_home_menu"
            style="@style/DefImageViewStyle"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_menu"
            app:elevation="10dp" />

        <ImageView
            android:id="@+id/img_arrow_btn"
            style="@style/DefImageViewStyle"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_full_arrow"
            android:visibility="gone"
            app:elevation="10dp" />


    </FrameLayout>

    <ImageView
        android:id="@+id/img_navigation_home"
        style="@style/DefImageViewStyle"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="end"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_navigation"
        app:layout_anchor="@id/outerView"
        app:layout_anchorGravity="top|end"
        app:layout_constraintBottom_toTopOf="@+id/outerView" />


    <ImageView
        android:id="@+id/outerView"
        android:layout_width="36dp"
        android:layout_height="5dp"
        android:background="@drawable/ic_rectangle"
        android:contentDescription="@string/app_name"
        android:visibility="invisible"
        app:layout_anchor="@id/bottomSheetBehaviorLayout1"
        app:layout_anchorGravity="top|end" />

    <LinearLayout
        android:id="@+id/bottomSheetBehaviorLayout1"
        style="@style/CardViewWithCornerStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        app:elevation="0dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <FrameLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:animateLayoutChanges="true">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/currentLocation"
                    style="@style/DefEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:background="@drawable/rounded_up"
                    android:drawableStart="@drawable/ic_red_pin"
                    android:elevation="0dp"
                    android:gravity="center_vertical"
                    android:hint="@string/mock_hint"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/dividerColor"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:background="@drawable/rounded_down"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/currentLocation">


                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/destination"
                        style="@style/DefEditTextStyle"
                        android:layout_width="0dp"
                        android:layout_height="52dp"
                        android:layout_weight="1"
                        android:background="@color/transparent_a"
                        android:drawableStart="@drawable/ic_blue_oval"
                        android:gravity="center_vertical"
                        android:hint="@string/where"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:hint="@string/where" />

                    <View
                        android:id="@+id/view3"
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginVertical="16dp"
                        android:layout_marginEnd="16dp"
                        android:background="#CBCBCB" />

                    <ImageView
                        android:id="@+id/moveToMapButton"
                        style="@style/DefImageViewStyle"
                        android:layout_gravity="center"
                        android:layout_marginEnd="21dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_arrow_right" />

                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <include
                android:id="@+id/searchIncludeLayout"
                layout="@layout/search_layout" />

            <ImageView
                android:id="@+id/savedButton"
                style="@style/DefImageViewStyle"
                android:layout_gravity="bottom|end"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_saved_address"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <include
                android:id="@+id/mapDestinationConfirmLayout"
                layout="@layout/current_location_layout"
                android:visibility="gone" />
        </FrameLayout>
    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>